python/5주차/0926-201911185-신동성-쉘.txt
 ds@sindongseong-ui-MacBookAir  ~/ds_study/note3-2/python   main  python
Python 3.11.4 (main, Jun 20 2023, 17:23:00) [Clang 14.0.3 (clang-1403.0.22.14.1)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> import calendar
>>> calendar.prcal(2023)
                                  2023

      January                   February                   March
Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su
                   1             1  2  3  4  5             1  2  3  4  5
 2  3  4  5  6  7  8       6  7  8  9 10 11 12       6  7  8  9 10 11 12
 9 10 11 12 13 14 15      13 14 15 16 17 18 19      13 14 15 16 17 18 19
16 17 18 19 20 21 22      20 21 22 23 24 25 26      20 21 22 23 24 25 26
23 24 25 26 27 28 29      27 28                     27 28 29 30 31
30 31

       April                      May                       June
Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su
                1  2       1  2  3  4  5  6  7                1  2  3  4
 3  4  5  6  7  8  9       8  9 10 11 12 13 14       5  6  7  8  9 10 11
10 11 12 13 14 15 16      15 16 17 18 19 20 21      12 13 14 15 16 17 18
17 18 19 20 21 22 23      22 23 24 25 26 27 28      19 20 21 22 23 24 25
24 25 26 27 28 29 30      29 30 31                  26 27 28 29 30

        July                     August                  September
Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su
                1  2          1  2  3  4  5  6                   1  2  3
 3  4  5  6  7  8  9       7  8  9 10 11 12 13       4  5  6  7  8  9 10
10 11 12 13 14 15 16      14 15 16 17 18 19 20      11 12 13 14 15 16 17
17 18 19 20 21 22 23      21 22 23 24 25 26 27      18 19 20 21 22 23 24
24 25 26 27 28 29 30      28 29 30 31               25 26 27 28 29 30
31

      October                   November                  December
Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su
                   1             1  2  3  4  5                   1  2  3
 2  3  4  5  6  7  8       6  7  8  9 10 11 12       4  5  6  7  8  9 10
 9 10 11 12 13 14 15      13 14 15 16 17 18 19      11 12 13 14 15 16 17
16 17 18 19 20 21 22      20 21 22 23 24 25 26      18 19 20 21 22 23 24
23 24 25 26 27 28 29      27 28 29 30               25 26 27 28 29 30 31
30 31
>>> improt calendar as C
  File "<stdin>", line 1
    improt calendar as C
           ^^^^^^^^
SyntaxError: invalid syntax
>>> import calendar as C
>>> c.prcal(2022)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'c' is not defined. Did you mean: 'C'?
>>> C.prcal(2022)
                                  2022

      January                   February                   March
Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su
                1  2          1  2  3  4  5  6          1  2  3  4  5  6
 3  4  5  6  7  8  9       7  8  9 10 11 12 13       7  8  9 10 11 12 13
10 11 12 13 14 15 16      14 15 16 17 18 19 20      14 15 16 17 18 19 20
17 18 19 20 21 22 23      21 22 23 24 25 26 27      21 22 23 24 25 26 27
24 25 26 27 28 29 30      28                        28 29 30 31
31

       April                      May                       June
Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su
             1  2  3                         1             1  2  3  4  5
 4  5  6  7  8  9 10       2  3  4  5  6  7  8       6  7  8  9 10 11 12
11 12 13 14 15 16 17       9 10 11 12 13 14 15      13 14 15 16 17 18 19
18 19 20 21 22 23 24      16 17 18 19 20 21 22      20 21 22 23 24 25 26
25 26 27 28 29 30         23 24 25 26 27 28 29      27 28 29 30
                          30 31

        July                     August                  September
Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su
             1  2  3       1  2  3  4  5  6  7                1  2  3  4
 4  5  6  7  8  9 10       8  9 10 11 12 13 14       5  6  7  8  9 10 11
11 12 13 14 15 16 17      15 16 17 18 19 20 21      12 13 14 15 16 17 18
18 19 20 21 22 23 24      22 23 24 25 26 27 28      19 20 21 22 23 24 25
25 26 27 28 29 30 31      29 30 31                  26 27 28 29 30

      October                   November                  December
Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su      Mo Tu We Th Fr Sa Su
                1  2          1  2  3  4  5  6                1  2  3  4
 3  4  5  6  7  8  9       7  8  9 10 11 12 13       5  6  7  8  9 10 11
10 11 12 13 14 15 16      14 15 16 17 18 19 20      12 13 14 15 16 17 18
17 18 19 20 21 22 23      21 22 23 24 25 26 27      19 20 21 22 23 24 25
24 25 26 27 28 29 30      28 29 30                  26 27 28 29 30 31
31
>>> C.weekday(2023,12,25)
0
>>> C.weekday(2023,7,8)
5
>>> import random as rand
>>> rand.randint(1,100)
65
>>> rand.randint(1,100)
76
>>> rand.randrange(1,100)
1
>>> rand.randrange(1,100)
71
>>> import time
>>> time.ctime()
'Tue Sep 26 22:55:34 2023'
>>> time.sleep(5)
>>> time.sleep(0.1)

 ✘ ds@sindongseong-ui-MacBookAir  ~/Downloads  python -u "/Users/ds/ds_study/note3-2/python/5주차/0926-201911185-신동성-2.py"
수를 맞혀보세요:50
컴퓨터 수가 더 큽니다.
컴퓨터 수는 55 입니다.
 ds@sindongseong-ui-MacBookAir  ~/Downloads  python -u "/Users/ds/ds_study/note3-2/python/5주차/0926-201911185-신동성-2.py"
수를 맞혀보세요:30
컴퓨터 수가 더 큽니다.
컴퓨터 수는 39 입니다.
 ds@sindongseong-ui-MacBookAir  ~/Downloads  python -u "/Users/ds/ds_study/note3-2/python/5주차/0926-201911185-신동성-3.py"
어떤 문자열을 입력하겠습니까? 애플 
어떤 문자열을 입력하겠습니까?망고
입력하신  애플 + 망고 를 연결한 문장은 애플망고 입니다.
 ds@sindongseong-ui-MacBookAir  ~/Downloads  python -u "/Users/ds/ds_study/note3-2/python/5주차/0926-201911185-신동성-4.py"
['aa', 'aa', 'aa']
 ds@sindongseong-ui-MacBookAir  ~/Downloads  python -u "/Users/ds/ds_study/note3-2/python/5주차/0926-201911185-신동성-4.py"
원하는 단어를 입력하세요>> 프로그래밍
원하는 단어를 입력하세요>> 문제
원하는 단어를 입력하세요>> 해결
리스트1 =  ['프로그래밍', '문제', '해결']
리스트1 + 리스트2 =  문제사랑
 ds@sindongseong-ui-MacBookAir  ~/Downloads  python -u "/Users/ds/ds_study/note3-2/python/5주차/0926-201911185-신동성-5.py"
구매할 게임 아이템은? 영롱한 망토
개수는 몇 개?1
구매할 게임 아이템은? 땅콩
개수는 몇 개?5
구매할 게임 아이템은? 푸른 검
개수는 몇 개?2

구매한 게임 아이템 =  {'영롱한 망토': 1, '땅콩': 5, '푸른 검': 2}
 ds@sindongseong-ui-MacBookAir  ~/Downloads  python -u "/Users/ds/ds_study/note3-2/python/5주차/0926-201911185-신동성-5.py"
구매할 게임 아이템은? 영롱한 망토
개수는 몇 개?1
구매할 게임 아이템은? 땅콩
개수는 몇 개?5
구매할 게임 아이템은? 푸른 검 
개수는 몇 개?3

구매한 게임 아이템 =  {'영롱한 망토': 1, '땅콩': 5, '푸른 검': 3}

딕셔너리에 구매한 아이템이 있는지 확인하세요.
확인하고 싶은 아이템은? 푸른 검
Traceback (most recent call last):
  File "/Users/ds/ds_study/note3-2/python/5주차/0926-201911185-신동성-5.py", line 14, in <module>
    if game.isinstance(is_item) :
       ^^^^^^^^^^^^^^^
AttributeError: 'dict' object has no attribute 'isinstance'
 ✘ ds@sindongseong-ui-MacBookAir  ~/Downloads  python -u "/Users/ds/ds_study/note3-2/python/5주차/0926-201911185-신동성-5.py"
구매할 게임 아이템은? 2
개수는 몇 개?3
구매할 게임 아이템은? 2
개수는 몇 개?3
구매할 게임 아이템은? 2
개수는 몇 개?3

구매한 게임 아이템 =  {'2': 3}

딕셔너리에 구매한 아이템이 있는지 확인하세요.
확인하고 싶은 아이템은? 2
2은(는) 3개 있습니다
 ds@sindongseong-ui-MacBookAir  ~/Downloads  python -u "/Users/ds/ds_study/note3-2/python/5주차/0926-201911185-신동성-5.py"
구매할 게임 아이템은? ㅈ asef
개수는 몇 개?2
구매할 게임 아이템은? abc
개수는 몇 개?3
구매할 게임 아이템은? cde 
개수는 몇 개?4

구매한 게임 아이템 =  {'asef': 2, 'abc': 3, 'cde': 4}

딕셔너리에 구매한 아이템이 있는지 확인하세요.
확인하고 싶은 아이템은? awefwaef
awefwaef은(는) 없습니다
 ds@sindongseong-ui-MacBookAir  ~/Downloads  python -u "/Users/ds/ds_study/note3-2/python/5주차/0926-201911185-신동성-5.py"
구매할 게임 아이템은? abc
개수는 몇 개?2
구매할 게임 아이템은? 2
개수는 몇 개?2
구매할 게임 아이템은? 3
개수는 몇 개?2

구매한 게임 아이템 =  {'abc': 2, '2': 2, '3': 2}

딕셔너리에 구매한 아이템이 있는지 확인하세요.
확인하고 싶은 아이템은? abc
abc은(는) 2개 있습니다
 ds@sindongseong-ui-MacBookAir  ~/Downloads  python -u "/Users/ds/ds_study/note3-2/python/5주차/0926-201911185-신동성-6.py"
1
2
3
[4, 5]
6
[7]
1
2
3
[4, 5]
 ds@sindongseong-ui-MacBookAir  ~/Downloads  python -u "/Users/ds/ds_study/note3-2/python/5주차/0926-201911185-신동성-6.py"
1 2 3 [4, 5] 6 [7] 
1 2 3 [4, 5] 
 ds@sindongseong-ui-MacBookAir  ~/Downloads  python -u "/Users/ds/ds_study/note3-2/python/5주차/0926-201911185-신동성-6.py"
1 2 3 [4, 5] 6 [7] 
1 2 3 [4, 5] 
12 확인! 반복을 종료합니다.

 ds@sindongseong-ui-MacBookAir  ~/Downloads  python -u "/Users/ds/ds_study/note3-2/python/5주차/0926-201911185-신동성-6.py"
1 2 3 [4, 5] 6 [7] 
1 2 3 [4, 5] 
12 확인! 반복을 종료합니다.